docs: Setup sphinx docs
Setup sphinx to generate documentation. To generate rst file based on the code, use `sphinx-apidoc -o docs/source/ decent_bench/`. To then generate html files, use `make -C docs html. Html files can be previewed in most IDEs with an extension. When making changes to code doc, only html regeneration is necessary. rst regeneration is however needed when adding/removing files.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,18 @@ deps = [
   "mypy",
   "pytest",
   "ruff",
+  "sphinx",
+  "sphinx_rtd_theme",
+]
+
+[tool.tox.env.sphinx]
+description = "Generate rst and html files using sphinx"
+deps = ["sphinx", "sphinx_rtd_theme"]
+allowlist_externals = ["make"]
+commands = [
+  ["sphinx-apidoc", "-o", "docs/source", "decent_bench", "--no-toc"],
+  ["make", "-C", "docs", "clean"],
+  ["make", "-C", "docs", "html"],
 ]
 
 [tool.tox.env.mypy]
