docs: Enable readthedocs to install dev dependencies (#24)
Enable readthedocs to install the required dependencies to build sphinx docs, which is currently failing. This involves putting the dependencies under project.optional-dependencies, making them installable when installing decent-bench.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,23 +4,28 @@ version = "0.0.0"
 requires-python = ">=3.13"
 dependencies = []
 
-[tool.tox]
-envlist = ["dev", "mypy", "pytest", "ruff"]
-
-[tool.tox.env.dev]
-deps = [
+[project.optional-dependencies]
+dev = [
   "mypy",
   "pytest",
   "ruff",
   "sphinx",
-  "sphinx_rtd_theme",
+  "sphinx_rtd_theme"
 ]
 
+[tool.tox]
+envlist = ["dev", "mypy", "pytest", "ruff", "sphinx"]
+
+[tool.tox.env.dev]
+description = "Generate dev venv with all dependencies, active with `source .tox/dev/bin/activate`"
+deps = [".[dev]"]
+
 [tool.tox.env.sphinx]
-description = "Generate rst and html files using sphinx"
+description = "Clean up and regenerate rst and html files using sphinx"
 deps = ["sphinx", "sphinx_rtd_theme"]
-allowlist_externals = ["make"]
+allowlist_externals = ["find", "make"]
 commands = [
+  ["find", "docs/source", "-name", "*.rst", "!", "-name", "index.rst", "-delete"],
   ["sphinx-apidoc", "-o", "docs/source", "decent_bench", "--no-toc"],
   ["make", "-C", "docs", "clean"],
   ["make", "-C", "docs", "html"],
@@ -65,3 +70,4 @@ lint.ignore = [
 ]
 preview = true
 line-length = 120
+
