feat(costs): Add Quadratic and LinearRegression cost functions

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,9 @@
 name = "decent-bench"
 version = "0.0.0"
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+  "numpy",
+]
 
 [project.optional-dependencies]
 dev = [
@@ -59,14 +61,20 @@ strict = true
 [tool.ruff]
 lint.select = ["ALL"]
 lint.ignore = [
-  "COM812", # missing-trailing-comma (COM812) may cause conflicts when used with the formatter
-  "CPY001", # Missing copyright notice at top of file
-  "D100",   # Missing docstring in public module
-  "D104",   # Missing docstring in public package
-  "D107",   # Missing docstring in __init__
-  "D203",   # incorrect-blank-line-before-class (D203) and no-blank-line-before-class (D211) are incompatible
-  "D212",   # multi-line-summary-first-line (D212) and multi-line-summary-second-line (D213) are incompatible
-  "TC002",  # typing-only-third-party-import, reduces rt overhead but slows down development and makes imports messy
+  "COM812",   # missing-trailing-comma (COM812) may cause conflicts when used with the formatter
+  "CPY001",   # Missing copyright notice at top of file
+  "D100",     # Missing docstring in public module
+  "D104",     # Missing docstring in public package
+  "D107",     # Missing docstring in __init__
+  "D203",     # incorrect-blank-line-before-class (D203) and no-blank-line-before-class (D211) are incompatible
+  "D212",     # multi-line-summary-first-line (D212) and multi-line-summary-second-line (D213) are incompatible
+  "D415",     # missing-terminal-punctuation, D400 already enforces first line to end with period
+  "DOC201",   # docstring-missing-returns, always documenting the return value is too verbose
+  "EM101",    # raw-string-in-exception, complains about putting raw string as error msg
+  "EM102",    # f-string-in-exception, complains about putting f string as error msg
+  "PLR2004",  # magic-value-comparison, complains about dimension checks in cost functions
+  "TC002",    # typing-only-third-party-import, reduces rt overhead but slows down development and makes imports messy
+  "TRY003",   # raise-vanilla-args, complains about simple error messages like `ValueError('Matrix A must be 2D')`
 ]
 preview = true
 line-length = 120
