--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,6 +59,8 @@ testpaths = ["test"]
 strict = true
 
 [tool.ruff]
+lint.flake8-annotations.mypy-init-return = true
+lint.pydocstyle.ignore-decorators = ["property"]
 lint.select = ["ALL"]
 lint.ignore = [
   "COM812",   # missing-trailing-comma (COM812) may cause conflicts when used with the formatter
