feat(costs): Add logistic regression
Add logistic regression cost function and fix some docstring reference mistakes

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,8 @@ version = "0.0.0"
 requires-python = ">=3.13"
 dependencies = [
   "numpy",
+  "scipy",
+  "scipy-stubs"
 ]
 
 [project.optional-dependencies]
