--- a/pyproject.toml
+++ b/pyproject.toml
@@ -77,8 +77,10 @@ lint.ignore = [
   "EM102",    # f-string-in-exception, complains about putting f string as error msg
   "PLR0913",  # too-many-arguments, complains when there are more than 5 arguments
   "PLR2004",  # magic-value-comparison, complains about dimension checks in cost functions
+  "PLR6301",  # no-self-use, complains when self is unused even when implementing an abstract method
   "S311",     # suspicious-non-cryptographic-random-usage, complains about `random.random()`
-  "TC002",    # typing-only-third-party-import, reduces rt overhead but slows down development and makes imports messy
+  "TC002",    # typing-only-third-party-import, reduced rt overhead but slowed development and messy imports
+  "TC003",    # typing-only-standard-library-import, reduced rt overhead but slowed development and messy imports
   "TRY003",   # raise-vanilla-args, complains about simple error messages like `ValueError('Matrix A must be 2D')`
 ]
 preview = true
