--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,14 +5,16 @@ requires-python = ">=3.13"
 dependencies = [
   "numpy",
   "scipy",
-  "scipy-stubs"
+  "scikit-learn",
 ]
 
 [project.optional-dependencies]
 dev = [
+  "microsoft-python-type-stubs @ git+https://github.com/microsoft/python-type-stubs.git",
   "mypy",
   "pytest",
   "ruff",
+  "scipy-stubs",
   "sphinx",
   "sphinx_rtd_theme"
 ]
@@ -37,7 +39,7 @@ commands = [
 
 [tool.tox.env.mypy]
 description = "Run mypy (static type checker)"
-deps = ["mypy"]
+deps = [".[dev]"]
 commands = [["mypy", "decent_bench"]]
 
 [tool.tox.env.pytest]
