--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
   "rich",
   "scipy",
   "scikit-learn",
+  "tabulate",
 ]
 
 [project.optional-dependencies]
@@ -20,6 +21,7 @@ dev = [
   "sphinx",
   "sphinx_rtd_theme",
   "types-networkx",
+  "types-tabulate",
 ]
 
 [tool.tox]
