feat(metrics): Add plotting
Add function that plots plot metrics. Each algorithm's curve is its metric mean across the trials.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,7 @@ name = "decent-bench"
 version = "0.0.0"
 requires-python = ">=3.13"
 dependencies = [
+  "matplotlib",
   "networkx",
   "numpy",
   "rich",
