--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,6 +72,7 @@ strict = true
 lint.flake8-annotations.mypy-init-return = true
 lint.select = ["ALL"]
 lint.ignore = [
+  "BLE001",   # blind-except, complains when catching `Exception`
   "C901",     # complex-structure, complains when there are many branches
   "COM812",   # missing-trailing-comma, may cause conflicts when used with the formatter
   "CPY001",   # missing-copyright-notice
