--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,7 @@ description = "Clean up and regenerate rst and html files using sphinx"
 deps = ["sphinx", "sphinx_rtd_theme"]
 allowlist_externals = ["find", "make"]
 commands = [
-  ["find", "docs/source", "-name", "*.rst", "!", "-name", "index.rst", "-delete"],
+  ["find", "docs/source", "-name", "*.rst", "!", "-name", "index.rst", "!", "-path", "*/snippets/*", "-delete"],
   ["sphinx-apidoc", "-o", "docs/source", "decent_bench", "--no-toc"],
   ["make", "-C", "docs", "clean"],
   ["make", "-C", "docs", "html", "SPHINXOPTS=-W"],
