--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,13 +14,13 @@ dependencies = [
 
 [project.optional-dependencies]
 dev = [
-  "microsoft-python-type-stubs @ git+https://github.com/microsoft/python-type-stubs.git",
+  "microsoft-python-type-stubs @ git+https://github.com/microsoft/python-type-stubs.git@main",
   "mypy",
+  "pydata-sphinx-theme @ git+https://github.com/pydata/pydata-sphinx-theme.git@main",
   "pytest",
   "ruff",
   "scipy-stubs",
   "sphinx",
-  "sphinx_rtd_theme",
   "types-networkx",
   "types-tabulate",
 ]
@@ -34,7 +34,7 @@ deps = [".[dev]"]
 
 [tool.tox.env.sphinx]
 description = "Clean up and regenerate rst and html files using sphinx"
-deps = ["sphinx", "sphinx_rtd_theme"]
+deps = ["sphinx", "pydata-sphinx-theme @ git+https://github.com/pydata/pydata-sphinx-theme.git@main"]
 allowlist_externals = ["find", "make"]
 commands = [
   ["find", "docs/source", "-name", "*.rst", "!", "-name", "index.rst", "!", "-path", "*/snippets/*", "-delete"],
