--- a/readthedocs.yaml
+++ b/readthedocs.yaml
@@ -17,7 +17,6 @@ sphinx:
 
 python:
   install:
+    - requirements: docs/sphinx_theme.txt
     - method: pip
       path: .
-      extra_requirements:
-        - dev
