--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,6 @@ dev = [
   "ruff",
   "scipy-stubs",
   "sphinx",
-  "sphinx-toolbox",
   "types-networkx",
   "types-tabulate",
   "torch",
@@ -61,7 +60,7 @@ deps = [
 
 [tool.tox.env.sphinx]
 description = "Generate rst and html files using sphinx"
-deps = ["sphinx", "git+https://github.com/pydata/pydata-sphinx-theme.git@main", "sphinx-toolbox"]
+deps = ["sphinx", "git+https://github.com/pydata/pydata-sphinx-theme.git@main"]
 commands = [
   ["sphinx-apidoc", "-o", "docs/source/api", "decent_bench", "--separate", "--no-toc", "--templatedir=docs/source/_templates"],
   ["sphinx-build", "-W", "-E", "-b", "html", "docs/source", "docs/build/html"]
