--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,11 @@ dev = [
   "sphinx",
   "types-networkx",
   "types-tabulate",
+  "torch",
+  "torchvision",
+  "tensorflow",
+  "types-tensorflow",
+  "jax",
 ]
 
 [build-system]
@@ -112,6 +117,9 @@ lint.ignore = [
   "TC002",    # typing-only-third-party-import, reduced rt overhead but slower development and messy imports
   "TC003",    # typing-only-standard-library-import, reduced rt overhead but slower development and messy imports
   "TRY003",   # raise-vanilla-args, complains about simple error messages like `ValueError('Matrix A must be 2D')`
+  "FBT001",   # boolean-type-hint-positional-argument, complains about bool args with default values in functions
+  "FBT002",   # boolean-default-value-positional-argument, complains about bool args with default values in functions
+  "ICN001",   # unconventional-import-alias, complains about common import aliases like `import numpy as np` but it doesn't work for most libraries
 ]
 preview = true
 line-length = 120
