ci(tox): Organize dev envs

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,23 +38,14 @@ dev = [
   "types-tabulate",
   "torch",
   "torchvision",
-  "tensorflow",
   "types-tensorflow",
+]
+dev-cpu = [
+  "tensorflow",
   "jax",
 ]
 dev-gpu = [
-  "hatch",
-  "mypy",
-  "pytest",
-  "ruff",
-  "scipy-stubs",
-  "sphinx",
-  "types-networkx",
-  "types-tabulate",
-  "torch",
-  "torchvision",
   "tensorflow[and-cuda]",
-  "types-tensorflow",
   "jax[cuda12]",
 ]
 
@@ -70,6 +61,7 @@ envlist = ["dev", "mypy", "pytest", "ruff", "sphinx"]
 description = "Generate dev venv with all dependencies, active with `source .tox/dev/bin/activate`"
 deps = [
   ".[dev]",
+  ".[dev-cpu]",
   "git+https://github.com/microsoft/python-type-stubs.git@main",
   "git+https://github.com/pydata/pydata-sphinx-theme.git@main"
 ]
@@ -77,6 +69,7 @@ deps = [
 [tool.tox.env.dev-gpu]
 description = "Generate dev venv with all dependencies including GPU support, active with `source .tox/dev-gpu/bin/activate`"
 deps = [
+  ".[dev]",
   ".[dev-gpu]",
   "git+https://github.com/microsoft/python-type-stubs.git@main",
   "git+https://github.com/pydata/pydata-sphinx-theme.git@main"
@@ -92,7 +85,7 @@ commands = [
 
 [tool.tox.env.mypy]
 description = "Run mypy (static type checker)"
-deps = [".[dev]", "git+https://github.com/microsoft/python-type-stubs.git@main"]
+deps = [".[dev]", ".[dev-cpu]", "git+https://github.com/microsoft/python-type-stubs.git@main"]
 commands = [["mypy", "decent_bench"]]
 
 [tool.tox.env.pytest]
