ref(Dataset): Convert to list of tuples instead of tensors

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,9 @@ dev = [
   "torch",
   "torchvision",
   "types-tensorflow",
+  "pandas",
+  "pandas-stubs",
+  "kagglehub",
 ]
 dev-cpu = [
   "tensorflow",
