fix(PR): Fix PR issues

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -80,7 +80,7 @@ deps = [
 
 [tool.tox.env.sphinx]
 description = "Generate rst and html files using sphinx"
-deps = [".[dev]", ".[dev-cpu]", "pydata-sphinx-theme"]
+deps = ["sphinx", "pydata-sphinx-theme"]
 commands = [
   ["sphinx-apidoc", "-o", "docs/source/api", "decent_bench", "--separate", "--no-toc", "--templatedir=docs/source/_templates"],
   ["sphinx-build", "-W", "-E", "-b", "html", "docs/source", "docs/build/html"]
